--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Friendly Phil's IT Support – Cape Town | Award-Winning Tech Support</title>
+    <title>Phil's IT Support – Cape Town | Award-Winning Tech Support</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <meta name="description" content="Cape Town's most trusted tech support. Beautiful, patient guidance for phones, tablets, and computers. No jargon—just results.">
+    <meta name="description" content="Cape Town's trusted tech support. Beautiful,Clear help for phones, tablets, and computers. No jargon—just patient guidance.">
     <meta name="theme-color" content="#14b8a6">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -1412,7 +1412,7 @@
             <div class="nav__brand">
                 <div class="nav__logo vibrate-on-tap">💻</div>
                 <div class="nav__text">
-                    <h1 class="nav__title">Friendly Tech Help</h1>
+                    <h1 class="nav__title">Phil's IT Support</h1>
                     <p class="nav__subtitle">Cape Town</p>
                 </div>
             </div>
@@ -1437,17 +1437,17 @@
         <div class="container">
             <div class="hero__content">
                 <div class="hero__badge vibrate-on-tap">
-                    🏆 Cape Town's #1 Trusted Tech Support
+                    🏆 (ISC)² Cyber Security Certified & Computer Science Degree- University Of The People 
                 </div>
 
                 <h1 class="hero__title">
-                    Beautiful Tech Help<br>
-                    Without The Confusion
+                    Phil's IT Support<br>
+                    Without Confusions
                 </h1>
 
                 <p class="hero__subtitle">
-                    Transform your tech frustrations into confidence with patient, 
-                    jargon-free guidance. Every step explained clearly, every solution beautiful.
+                    Clear help for your phones, tablets, Routers and computers No jargon just patient guidance, 
+                    Every step explained clearly, every solution beautifully done.
                 </p>
 
                 <div class="hero__features">
@@ -1740,7 +1740,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__content">
-                <h3 class="footer__title">Friendly Tech Help</h3>
+                <h3 class="footer__title">Phil's IT Support </h3>
                 <p class="footer__tagline">Beautiful technology experiences for Cape Town</p>
 
                 <div class="footer__contact">
@@ -1750,7 +1750,7 @@
             </div>
 
             <div class="footer__copyright">
-                <p>&copy; 2025 Friendly Tech Help. Crafted with care and love at Helderberg Village .</p>
+                <p>&copy; 2025 Phil's IT Support. Crafted with care and love at Helderberg Village .</p>
             </div>
         </div>
     </footer>
