--- a/index.html
+++ b/index.html
@@ -2248,11 +2248,7 @@
     <section class="hero" id="hero">
         <div class="container">
             <div class="hero__content">
-                <div class="hero__badge vibrate-on-tap">
-                    🏆 (ISC)² Cyber Security Certified & Computer Science Degree- University Of The People 
-                </div>
-
-                <h1 class="hero__title">
+               <h1 class="hero__title">
                     Phil's IT Support<br>
                     Without Confusions
                 </h1>
@@ -2449,15 +2445,15 @@
                         <div class="trust-card__icon">🌟</div>
                         <h3 class="trust-card__title">Local Excellence</h3>
                         <p class="trust-card__description">
-                            Proudly serving Cape Town with deep understanding of local needs.
+                           We are proudly serving Cape Town with deep understanding of local needs.
                         </p>
                     </div>
 
                     <div class="trust-card vibrate-on-tap" tabindex="0">
-                        <div class="trust-card__icon">💬</div>
-                        <h3 class="trust-card__title">Clear Communication</h3>
+                        <div class="trust-card__icon">🎓</div>
+                        <h3 class="trust-card__title">Professional</h3>
                         <p class="trust-card__description">
-                            Zero jargon, maximum clarity. Every explanation tailored to you.
+                           (ISC)² Cyber Security Certified & Computer Science Degree- University Of The People.
                         </p>
                     </div>
 
@@ -2488,7 +2484,7 @@
                 <div class="contact__info">
                     <h2 class="contact__title">Ready for Tech That Just Works?</h2>
                     <p class="contact__description">
-                        Choose your preferred way to connect. I'll respond with a clear plan to solve your tech challenges beautifully.
+                        Choose your preferred way to connect.
                     </p>
 
                     <div class="contact__methods">
@@ -2549,7 +2545,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="phone">Phone (Optional)</label>
+                        <label for="phone">Phone</label>
                         <input type="tel" 
                                id="phone" 
                                name="phone" 
@@ -2575,8 +2571,8 @@
                                    name="consent" 
                                    required
                                    style="margin: 0; transform: scale(1.2);">
-                            <span style="font-size: var(--text-sm); opacity: 0.9;">
-                                I consent to having my data processed securely for support purposes
+                            <span style="font-size: var(--text-sm); opacity: 0.7;">
+                                Confirm 
                             </span>
                         </label>
                     </div>
