--- a/index.html
+++ b/index.html
@@ -2571,8 +2571,8 @@
                                    name="consent" 
                                    required
                                    style="margin: 0; transform: scale(1.2);">
-                            <span style="font-size: var(--text-sm); opacity: 0.7;">
-                                Confirm 
+                            <span style="font-size: var(--text-sm); opacity: 0.10;">
+                            Confirm 
                             </span>
                         </label>
                     </div>
@@ -2594,7 +2594,7 @@
         <div class="container">
             <div class="footer__content">
                 <h3 class="footer__title">Phil's IT Support</h3>
-                <p class="footer__tagline">Beautiful technology experiences for Cape Town</p>
+                <p class="footer__tagline">Trusted</p>
 
                 <div class="footer__contact">
                     <a href="tel:+27712040708" class="vibrate-on-tap">📞 071 204 0708</a>
