--- a/index.html
+++ b/index.html
@@ -2358,13 +2358,13 @@
                         <h3 class="service-card__title">Security & Privacy</h3>
                     </div>
                     <p class="service-card__description">
-                        Fortress-level protection with elegant simplicity, keeping your digital life secure.
+                        Will help to keep your digital life secure and private.
                     </p>
                     <ul class="service-card__features">
                         <li>Remove ads and viruses</li>
                         <li>Advanced password strategies</li>
                         <li>Scam detection training</li>
-                        <li>Privacy audit & cleanup</li>
+                        <li>Privacy audit & Encryption</li>
                     </ul>
                     <div class="service-card__cta">
                         <a href="#contact" class="btn btn--primary vibrate-on-tap">Secure My Data</a>
@@ -2380,7 +2380,7 @@
                         Unlock your device's full potential with personalized, patient instruction at your pace.
                     </p>
                     <ul class="service-card__features">
-                        <li>Video calling & messaging</li>
+                        <li>Email, Video calling & messaging</li>
                         <li>Safe online banking & shopping</li>
                         <li>Photography & media management</li>
                         <li>Accessibility customization</li>
@@ -2412,10 +2412,10 @@
                 <div class="service-card vibrate-on-tap" tabindex="0">
                     <div class="service-card__header">
                         <div class="service-card__icon">💎</div>
-                        <h3 class="service-card__title">Ongoing Care</h3>
+                        <h3 class="service-card__title">Monthly Care</h3>
                     </div>
                     <p class="service-card__description">
-                        Premium maintenance and proactive support to keep your technology running flawlessly.
+                        Premium maintenance and proactive support to keep your technology running.
                     </p>
                     <ul class="service-card__features">
                         <li>Monthly health checkups</li>
@@ -2437,7 +2437,7 @@
             <div class="trust__content">
                 <h2 class="trust__title">Why Cape Town Chooses Us</h2>
                 <p class="trust__subtitle">
-                    Experience the difference that expertise, patience, and genuine care make.
+                    Experience a difference.
                 </p>
 
                 <div class="trust__grid">
@@ -2461,7 +2461,7 @@
                         <div class="trust-card__icon">🔒</div>
                         <h3 class="trust-card__title">Privacy Guardian</h3>
                         <p class="trust-card__description">
-                            Your data treated with bank-level security and confidentiality.
+                            Your data is yours to keep, we follow zero trust policy.
                         </p>
                     </div>
 
@@ -2482,7 +2482,7 @@
         <div class="container">
             <div class="contact__content">
                 <div class="contact__info">
-                    <h2 class="contact__title">Ready for Tech That Just Works?</h2>
+                    <h2 class="contact__title">Need help with your devices?</h2>
                     <p class="contact__description">
                         Choose your preferred way to connect.
                     </p>
@@ -2508,7 +2508,7 @@
                     <div class="contact-info-mobile">
                         <p><strong>⚡ Response:</strong> Usually within 2 hours</p>
                         <p><strong>📍 Service Area:</strong> Cape Town & surrounds</p>
-                        <p><strong>🔐 Privacy:</strong> Your data stays secure</p>
+                        <p><strong>🔐 Privacy:</strong> We don'r collect sensitive information</p>
                     </div>
                 </div>
 
@@ -2571,7 +2571,7 @@
                                    name="consent" 
                                    required
                                    style="margin: 0; transform: scale(1.2);">
-                            <span style="font-size: var(--text-sm); opacity: 0.10;">
+                            <span style="font-size: var(--text-sm); opacity: 0.3;">
                             Confirm 
                             </span>
                         </label>
