--- a/index.html
+++ b/index.html
@@ -2250,12 +2250,11 @@
             <div class="hero__content">
                <h1 class="hero__title">
                     Phil's IT Support<br>
-                    Without Confusions
+                    Help is just one tap away, let me sort out your device issues.
                 </h1>
 
                 <p class="hero__subtitle">
-                    Clear help for your phones, tablets, Routers and computers No jargon just patient guidance, 
-                    Every step explained clearly, every solution beautifully done.
+                    Professional support for your phone, tablet, router, and computer. Basic tutorials clear simple steps.
                 </p>
 
                 <div class="hero__features">
@@ -2345,7 +2344,7 @@
                         <li>Advanced malware removal</li>
                         <li>Speed optimization & cleanup</li>
                         <li>System updates & patches</li>
-                        <li>Hardware diagnostics</li>
+                        <li>Hardware diagnostics and upgrades</li>
                     </ul>
                     <div class="service-card__cta">
                         <a href="#contact" class="btn btn--primary vibrate-on-tap">Speed Up Device</a>
@@ -2558,7 +2557,7 @@
                         <label for="message">How Can I Help? *</label>
                         <textarea id="message" 
                                   name="message" 
-                                  placeholder="Describe your tech challenge or what you'd like to learn. The more details, the better I can help!" 
+                                  placeholder="Describe your tech challenge, what you'd like me to do for you. The more details, the better I can help!" 
                                   required
                                   maxlength="1000"></textarea>
                     </div>
@@ -2571,9 +2570,7 @@
                                    name="consent" 
                                    required
                                    style="margin: 0; transform: scale(1.2);">
-                            <span style="font-size: var(--text-sm); opacity: 0.3;">
-                            Confirm 
-                            </span>
+                            <span style="font-size: var(--text-sm); opacity: 0.9;">Confirm</span>
                         </label>
                     </div>
 
@@ -2594,7 +2591,7 @@
         <div class="container">
             <div class="footer__content">
                 <h3 class="footer__title">Phil's IT Support</h3>
-                <p class="footer__tagline">Trusted</p>
+                <p class="footer__tagline">Trusted!</p>
 
                 <div class="footer__contact">
                     <a href="tel:+27712040708" class="vibrate-on-tap">📞 071 204 0708</a>
