--- a/index.html
+++ b/index.html
@@ -2563,16 +2563,39 @@
                     </div>
 
                     <!-- Privacy Consent -->
-                    <div class="form-group">
-                        <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
-                            <input type="checkbox" 
-                                   id="consent" 
-                                   name="consent" 
-                                   required
-                                   style="margin: 0; transform: scale(1.2);">
-                            <span style="font-size: var(--text-sm); opacity: 0.9;">Confirm</span>
-                        </label>
-                    </div>
+<div class="form-group">
+  <label for="consent" style="
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    line-height: 1.4;
+  ">
+    <input
+      type="checkbox"
+      id="consent"
+      name="consent"
+      required
+      style="
+        margin: 0;
+        transform: scale(1.2);
+        flex-shrink: 0;
+        width: 18px;
+        height: 18px;
+        accent-color: var(--primary-500);
+      "
+    >
+    <span style="
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.95);
+      margin-left: 2px;
+      white-space: normal;
+    ">
+      Confirm
+    </span>
+  </label>
+</div>
+
 
                     <button type="submit" 
                             class="btn btn--accent btn--xl vibrate-on-tap" 
