--- a/index.html
+++ b/index.html
@@ -2250,7 +2250,7 @@
             <div class="hero__content">
                <h1 class="hero__title">
                     Phil's IT Support<br>
-                    Help is just one tap away, let me sort out your device issues.
+                    Help is just one tap away.
                 </h1>
 
                 <p class="hero__subtitle">
