--- a/index.html
+++ b/index.html
@@ -2249,7 +2249,7 @@
         <div class="container">
             <div class="hero__content">
                <h1 class="hero__title">
-                    Phil's IT Support<br>
+                    IT Grandson<br>
                     Help is just one tap away.
                 </h1>
 
@@ -2495,11 +2495,11 @@
                             </div>
                         </a>
 
-                        <a href="mailto:phillimon@pm.me" class="contact-method vibrate-on-tap">
+                        <a href="mailto:care@it-grandson.com" class="contact-method vibrate-on-tap">
                             <div class="contact-method__icon">✉️</div>
                             <div class="contact-method__content">
                                 <h4>Email Support</h4>
-                                <p>phillimon@pm.me - Detailed responses</p>
+                                <p>care@it-grandson.com - Detailed responses</p>
                             </div>
                         </a>
                     </div>
@@ -2613,17 +2613,17 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__content">
-                <h3 class="footer__title">Phil's IT Support</h3>
+                <h3 class="footer__title">IT Grandson</h3>
                 <p class="footer__tagline">Trusted!</p>
 
                 <div class="footer__contact">
                     <a href="tel:+27712040708" class="vibrate-on-tap">📞 071 204 0708</a>
-                    <a href="mailto:phillimon@pm.me" class="vibrate-on-tap">✉️ phillimon@pm.me</a>
+                    <a href="mailto: care@it-grandson.com" class="vibrate-on-tap">✉️ care@it-grandson.com</a>
                 </div>
             </div>
 
             <div class="footer__copyright">
-                <p>&copy; 2025 Phil's IT Support. Crafted with care and love at Helderberg Village. | 
+                <p>&copy; 2025 IT Grandson was crafted with care and love at Helderberg Village. | 
                    <a href="#" style="color: var(--primary-400); text-decoration: none;">Privacy Policy</a>
                 </p>
             </div>
