--- a/index.html
+++ b/index.html
@@ -2224,7 +2224,7 @@
             <div class="nav__brand">
                 <div class="nav__logo vibrate-on-tap">💻</div>
                 <div class="nav__text">
-                    <h1 class="nav__title">Phil's IT Support</h1>
+                    <h1 class="nav__title">IT Grandson</h1>
                     <p class="nav__subtitle">Cape Town</p>
                 </div>
             </div>
@@ -2507,7 +2507,7 @@
                     <div class="contact-info-mobile">
                         <p><strong>⚡ Response:</strong> Usually within 2 hours</p>
                         <p><strong>📍 Service Area:</strong> Cape Town & surrounds</p>
-                        <p><strong>🔐 Privacy:</strong> We don'r collect sensitive information</p>
+                        <p><strong>🔐 Privacy:</strong> We don't collect sensitive information</p>
                     </div>
                 </div>
 
