--- a/index.html
+++ b/index.html
@@ -2250,11 +2250,11 @@
             <div class="hero__content">
                <h1 class="hero__title">
                     IT Grandson<br>
-                    Help is just one tap away.
+                    Here to help, booking is just one tap away.
                 </h1>
 
                 <p class="hero__subtitle">
-                    Professional support for your phone, tablet, router, and computer. Basic tutorials clear simple steps.
+                   A support for your phone, tablet, router, or computer. Easy-to-follow tutorials with clear, simple steps designed just for you.
                 </p>
 
                 <div class="hero__features">
